--- a/index.html
+++ b/index.html
@@ -59,17 +59,26 @@
       </div>
     </header>
     <main>
+      <!-- ========================HERO==================== -->
       <section class="hero">
         <div class="container modal-btn-center">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="modal-btn" type="button">Order Service</button>
         </div>
       </section>
+      <!-- ========================/HERO==================== -->
+
+      <!-- ========================ASTRONAUT==================== -->
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">about us</h2>
           <ul class="list">
             <li class="list-item">
+              <a href="" class="big-svg">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </a>
               <h3 class="list-title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -77,6 +86,11 @@
               </p>
             </li>
             <li class="list-item">
+              <a href="" class="big-svg">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </a>
               <h3 class="list-title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -84,6 +98,11 @@
               </p>
             </li>
             <li class="list-item">
+              <a href="" class="big-svg">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </a>
               <h3 class="list-title">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
@@ -91,6 +110,11 @@
               </p>
             </li>
             <li class="list-item">
+              <a href="" class="big-svg">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </a>
               <h3 class="list-title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -100,6 +124,9 @@
           </ul>
         </div>
       </section>
+      <!-- ========================/ASTRONAUT==================== -->
+
+      <!-- ========================SECTION-IMG==================== -->
       <section class="section-img-only">
         <div class="container">
           <h2 class="title">What are we doing</h2>
@@ -131,6 +158,9 @@
           </ul>
         </div>
       </section>
+      <!-- ========================/SECTION-IMG==================== -->
+
+      <!-- ========================/TEAM CARD==================== -->
       <section class="team-card-bg section">
         <div class="container">
           <h2 class="title">Our Team</h2>
@@ -145,6 +175,36 @@
               <div class="team-card-text">
                 <h3 class="list-title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
+                <ul class="list list-icon">
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="card team-card-width">
@@ -157,6 +217,36 @@
               <div class="team-card-text">
                 <h3 class="list-title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
+                <ul class="list list-icon">
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="card team-card-width">
@@ -169,6 +259,36 @@
               <div class="team-card-text">
                 <h3 class="list-title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
+                <ul class="list list-icon">
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="card team-card-width">
@@ -181,23 +301,144 @@
               <div class="team-card-text">
                 <h3 class="list-title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
+                <ul class="list list-icon">
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="icon-container">
+                      <svg width="16" height="16" class="svg">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <!-- ========================/TEAM CARD==================== -->
+
+      <!-- ========================CUSTOMERS==================== -->
+
+      <section class="section">
+        <div class="container">
+          <h2 class="title">Customers</h2>
+          <ul class="list list-client">
+            <li>
+              <a href="" class="client-container">
+                <svg class="client-svg" height="56" width="104">
+                  <use href="./images/icons.svg#icon-client-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="client-container">
+                <svg class="client-svg" height="56" width="104">
+                  <use href="./images/icons.svg#icon-client-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="client-container">
+                <svg class="client-svg" height="56" width="104">
+                  <use href="./images/icons.svg#icon-client-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="client-container">
+                <svg class="client-svg" height="56" width="104">
+                  <use href="./images/icons.svg#icon-client-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="client-container">
+                <svg class="client-svg" height="56" width="104">
+                  <use href="./images/icons.svg#icon-client-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="client-container">
+                <svg class="client-svg" height="56" width="104">
+                  <use href="./images/icons.svg#icon-client-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- ========================/CUSTOMERS==================== -->
     </main>
+    <!-- ========================FOOTER==================== -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo link"
-          ><span class="accent">Web</span
-          ><span class="accent-light">Studio</span>
-        </a>
-        <p class="text footer-color-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a href="./index.html" class="logo link"
+            ><span class="accent">Web</span
+            ><span class="accent-light">Studio</span>
+          </a>
+          <p class="text footer-color-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="media">Social media</p>
+          <ul class="list">
+            <li>
+              <a href="" class="footer-icon-container">
+                <svg height="24" width="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-icon-container">
+                <svg height="24" width="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-icon-container">
+                <svg height="24" width="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-icon-container">
+                <svg height="24" width="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
+    <!-- ========================/FOOTER==================== -->
   </body>
 </html>
