--- a/portfolio.html
+++ b/portfolio.html
@@ -80,108 +80,108 @@
           </ul>
 
           <ul class="list wrap">
-            <li class="card filter-card-width">
+            <li class="card-filter">
               <img
                 src="images/banking-app-interface-concept.jpg"
                 alt=""
                 class="img"
-                width="360"
+                width="357"
               />
               <div class="text-filter-card">
                 <h3 class="list-title">Banking App Interface Concept</h3>
                 <p class="text">App</p>
               </div>
             </li>
-            <li class="card filter-card-width">
+            <li class="card-filter">
               <img
                 src="images/cashless-payment.jpg"
                 alt=""
                 class="img"
-                width="360"
+                width="357"
               />
               <div class="text-filter-card">
                 <h3 class="list-title">Cashless Payment</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
-            <li class="card filter-card-width">
+            <li class="card-filter">
               <img
                 src="images/meditaion-app.jpg"
                 alt=""
                 class="img"
-                width="360"
+                width="357"
               />
               <div class="text-filter-card">
                 <h3 class="list-title">Meditaion App</h3>
                 <p class="text">App</p>
               </div>
             </li>
-            <li class="card filter-card-width">
+            <li class="card-filter">
               <img
                 src="images/taxi-service.jpg"
                 alt=""
                 class="img"
-                width="360"
+                width="357"
               />
               <div class="text-filter-card">
                 <h3 class="list-title">Taxi Service</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
-            <li class="card filter-card-width">
+            <li class="card-filter">
               <img
                 src="images/screen-illustrations.jpg"
                 alt=""
                 class="img"
-                width="360"
+                width="357"
               />
               <div class="text-filter-card">
                 <h3 class="list-title">Screen Illustrations</h3>
                 <p class="text">Design</p>
               </div>
             </li>
-            <li class="card filter-card-width">
+            <li class="card-filter">
               <img
                 src="images/online-courses.jpg"
                 alt=""
                 class="img"
-                width="360"
+                width="357"
               />
               <div class="text-filter-card">
                 <h3 class="list-title">Online Courses</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
-            <li class="card filter-card-width">
+            <li class="card-filter">
               <img
                 src="images/instagram-stories-concept.jpg"
                 alt=""
                 class="img"
-                width="360"
+                width="357"
               />
               <div class="text-filter-card">
                 <h3 class="list-title">Instagram Stories Concept</h3>
                 <p class="text">Design</p>
               </div>
             </li>
-            <li class="card filter-card-width">
+            <li class="card-filter">
               <img
                 src="images/organic-food.jpg"
                 alt=""
                 class="img"
-                width="360"
+                width="357"
               />
               <div class="text-filter-card">
                 <h3 class="list-title">Organic Food</h3>
                 <p class="text">Web Site</p>
               </div>
             </li>
-            <li class="card filter-card-width">
+            <li class="card-filter">
               <img
                 src="images/fresh-coffee.jpg"
                 alt=""
                 class="img"
-                width="360"
+                width="357"
               />
               <div class="text-filter-card">
                 <h3 class="list-title">Fresh Coffee</h3>
@@ -192,17 +192,54 @@
         </div>
       </section>
     </main>
+  <!-- ========================FOOTER==================== -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo link"
-          ><span class="accent">Web</span
-          ><span class="accent-light">Studio</span>
-        </a>
-        <p class="text footer-color-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a href="./index.html" class="logo link"
+            ><span class="accent">Web</span
+            ><span class="accent-light">Studio</span>
+          </a>
+          <p class="text footer-color-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="media">Social media</p>
+          <ul class="list">
+            <li>
+              <a href="" class="footer-icon-container">
+                <svg height="24" width="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-icon-container">
+                <svg height="24" width="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-icon-container">
+                <svg height="24" width="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-icon-container">
+                <svg height="24" width="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
+    <!-- ========================/FOOTER==================== -->
   </body>
 </html>
