fix hero section + shadow on buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,118 +81,136 @@
 
           <ul class="list wrap">
             <li class="card-filter">
-              <img
-                src="images/banking-app-interface-concept.jpg"
-                alt=""
-                class="img"
-                width="357"
-              />
-              <div class="text-filter-card">
-                <h3 class="list-title">Banking App Interface Concept</h3>
-                <p class="text">App</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="images/banking-app-interface-concept.jpg"
+                  alt=""
+                  class="img"
+                  width="357"
+                />
+                <div class="text-filter-card">
+                  <h3 class="list-title">Banking App Interface Concept</h3>
+                  <p class="text">App</p>
+                </div>
+              </a>
             </li>
             <li class="card-filter">
-              <img
-                src="images/cashless-payment.jpg"
-                alt=""
-                class="img"
-                width="357"
-              />
-              <div class="text-filter-card">
-                <h3 class="list-title">Cashless Payment</h3>
-                <p class="text">Marketing</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="images/cashless-payment.jpg"
+                  alt=""
+                  class="img"
+                  width="357"
+                />
+                <div class="text-filter-card">
+                  <h3 class="list-title">Cashless Payment</h3>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-filter">
-              <img
-                src="images/meditaion-app.jpg"
-                alt=""
-                class="img"
-                width="357"
-              />
-              <div class="text-filter-card">
-                <h3 class="list-title">Meditaion App</h3>
-                <p class="text">App</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="images/meditaion-app.jpg"
+                  alt=""
+                  class="img"
+                  width="357"
+                />
+                <div class="text-filter-card">
+                  <h3 class="list-title">Meditaion App</h3>
+                  <p class="text">App</p>
+                </div>
+              </a>
             </li>
             <li class="card-filter">
-              <img
-                src="images/taxi-service.jpg"
-                alt=""
-                class="img"
-                width="357"
-              />
-              <div class="text-filter-card">
-                <h3 class="list-title">Taxi Service</h3>
-                <p class="text">Marketing</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="images/taxi-service.jpg"
+                  alt=""
+                  class="img"
+                  width="357"
+                />
+                <div class="text-filter-card">
+                  <h3 class="list-title">Taxi Service</h3>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-filter">
-              <img
-                src="images/screen-illustrations.jpg"
-                alt=""
-                class="img"
-                width="357"
-              />
-              <div class="text-filter-card">
-                <h3 class="list-title">Screen Illustrations</h3>
-                <p class="text">Design</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="images/screen-illustrations.jpg"
+                  alt=""
+                  class="img"
+                  width="357"
+                />
+                <div class="text-filter-card">
+                  <h3 class="list-title">Screen Illustrations</h3>
+                  <p class="text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="card-filter">
-              <img
-                src="images/online-courses.jpg"
-                alt=""
-                class="img"
-                width="357"
-              />
-              <div class="text-filter-card">
-                <h3 class="list-title">Online Courses</h3>
-                <p class="text">Marketing</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="images/online-courses.jpg"
+                  alt=""
+                  class="img"
+                  width="357"
+                />
+                <div class="text-filter-card">
+                  <h3 class="list-title">Online Courses</h3>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-filter">
-              <img
-                src="images/instagram-stories-concept.jpg"
-                alt=""
-                class="img"
-                width="357"
-              />
-              <div class="text-filter-card">
-                <h3 class="list-title">Instagram Stories Concept</h3>
-                <p class="text">Design</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="images/instagram-stories-concept.jpg"
+                  alt=""
+                  class="img"
+                  width="357"
+                />
+                <div class="text-filter-card">
+                  <h3 class="list-title">Instagram Stories Concept</h3>
+                  <p class="text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="card-filter">
-              <img
-                src="images/organic-food.jpg"
-                alt=""
-                class="img"
-                width="357"
-              />
-              <div class="text-filter-card">
-                <h3 class="list-title">Organic Food</h3>
-                <p class="text">Web Site</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="images/organic-food.jpg"
+                  alt=""
+                  class="img"
+                  width="357"
+                />
+                <div class="text-filter-card">
+                  <h3 class="list-title">Organic Food</h3>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="card-filter">
-              <img
-                src="images/fresh-coffee.jpg"
-                alt=""
-                class="img"
-                width="357"
-              />
-              <div class="text-filter-card">
-                <h3 class="list-title">Fresh Coffee</h3>
-                <p class="text">Web Site</p>
-              </div>
+              <a href="" class="link">
+                <img
+                  src="images/fresh-coffee.jpg"
+                  alt=""
+                  class="img"
+                  width="357"
+                />
+                <div class="text-filter-card">
+                  <h3 class="list-title">Fresh Coffee</h3>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
-  <!-- ========================FOOTER==================== -->
+    <!-- ========================FOOTER==================== -->
     <footer class="footer">
       <div class="container footer-container">
         <div>
